--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "recharts": "^3.6.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
