--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
-    "next": "15.1.4",
+    "next": "^16.1.4",
     "pg": "^8.17.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
